testdata/baselines/reference/submodule/conformance/moduleExportWithExportPropertyAssignment.errors.txt
a.js(4,6): error TS2339: Property 'f' does not exist on type '() => void'.
mod1.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
mod1.js(4,16): error TS2339: Property 'f' does not exist on type '() => void'.


==== a.js (1 errors) ====
    /// <reference path='./requires.d.ts' />
    var mod1 = require('./mod1')
    mod1()
    mod1.f() // error, not enough arguments
         ~
!!! error TS2339: Property 'f' does not exist on type '() => void'.
    
==== requires.d.ts (0 errors) ====
    declare var module: { exports: any };
    declare function require(name: string): any;
==== mod1.js (2 errors) ====
    /// <reference path='./requires.d.ts' />
    module.exports = function () { }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    /** @param {number} a */
    module.exports.f = function (a) { }
                   ~
!!! error TS2339: Property 'f' does not exist on type '() => void'.
    